bug free through perft 5!
also fixed a memory leak in perft

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,12 @@
         "xutility": "cpp",
         "iomanip": "cpp",
         "xlocmon": "cpp",
-        "xloctime": "cpp"
+        "xloctime": "cpp",
+        "charconv": "cpp",
+        "format": "cpp",
+        "locale": "cpp",
+        "optional": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp"
     }
 }
