Alright, here's negamax:
alpha-beta is next.
It beat me the first game.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ add_executable(uciChess
     compass.cpp
     eval.cpp
     move_gen.cpp
-    piece_location_tables.cpp)
+    piece_location_tables.cpp
+    search.cpp)
